[tool.poetry]
name = "imednet-workspace"
version = "0.1.0"
description = "Monorepo workspace for imednet packages"
authors = ["Frederick de Ruiter <127706008+fderuiter@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
imednet = { path = "packages/core", develop = true }
imednet-workflows = { path = "packages/plugins-workflows", develop = true }
imednet-streamlit = { path = "packages/plugins-streamlit", develop = true }

[tool.poetry.group.dev.dependencies]
pandas = ">=2.2.3,<3.0.0"
duckdb = ">=1.1.0"
pyarrow = ">=14.0.1"
black = ">=26.3.1"
ruff = "^0.11.6"
# Keep mypy on 1.15.x until the workspace packages are updated for newer checker behavior.
mypy = ">=1.15.0,<1.16.0"
pytest = ">=9.0.3"
pytest-cov = "^6.1.1"
respx = "^0.22.0"
pytest-asyncio = ">=0.24.0"
faker = "^24.9"
pre-commit = "^4.2.0"
virtualenv = "^20.36.1"
isort = "^6.0.1"
werkzeug = "^3.1.6"
sphinx = "^6.2.0"
sphinx-autodoc-typehints = "*"
sphinx-rtd-theme = "^3.0.2"
boto3 = "^1.34"
moto = "^5.0"
sqlalchemy = "^2.0"
openpyxl = "^3.1"
sphinxcontrib-mermaid = "^0.9.2"
doc8 = "^2.0.0"
codespell = "^2.4.1"
pip = "^26.0"
neo4j = "^6.2.0"
pymongo = "^4.17.0"


[tool.poetry.group.docs.dependencies]
furo = "<2023.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
src = ["packages/core/src", "packages/plugins-workflows/src", "packages/providers-airflow/src", "packages/plugins-streamlit/src", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["imednet", "imednet_workflows", "apache_airflow_providers_imednet", "imednet_streamlit"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "SLF"]
ignore = ["D", "ANN", "S101"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["field_validator", "model_validator"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["imednet", "imednet_workflows", "apache_airflow_providers_imednet", "imednet_streamlit"]
src_paths = ["packages/core/src", "packages/plugins-workflows/src", "packages/providers-airflow/src", "packages/plugins-streamlit/src", "tests"]

[tool.doc8]
max_line_length = 400
ignore_path = ["docs/_build"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = false
plugins = []
exclude = '^examples/.*$'

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pythonjsonlogger.*",
    "opentelemetry",
    "opentelemetry.*",
    "airflow",
    "airflow.*",
    "typer",
    "typer.*",
    "rich",
    "rich.*",
    "faker",
    "faker.*",
    "sqlalchemy",
    "sqlalchemy.*",
    "dotenv",
    "dotenv.*",
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
    "moto",
    "moto.*",
    "openpyxl",
    "openpyxl.*",
    "duckdb",
    "duckdb.*",
    "streamlit",
    "streamlit.*",
    "altair",
    "altair.*",
]
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
"packages/core/**/*.py" = ["SLF001"]
"tests/**/*.py" = ["SLF001"]
"scripts/**/*.py" = ["SLF001"]
