[project]
name = "imednet-workspace"
version = "0.1.0"
description = "Monorepo workspace for imednet packages"
authors = [
    { name = "Frederick de Ruiter", email = "127706008+fderuiter@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "imednet",
    "imednet-workflows",
    "imednet-streamlit",
    "imednet-plugins-sinks"
]

[project.optional-dependencies]
dev = [
    "pandas>=2.2.3,<3.0.0",
    "numpy<2.5.0",
    "duckdb>=1.1.0",
    "pyarrow>=14.0.1",
    "ruff>=0.11.6,<0.12.0",
    "mypy>=1.15.0,<1.16.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.1.1,<7.0.0",
    "respx>=0.22.0,<0.23.0",
    "pytest-asyncio>=0.24.0",
    "faker>=24.9.0,<25.0.0",
    "pre-commit>=4.2.0,<5.0.0",
    "virtualenv>=20.36.1,<21.0.0",
    "werkzeug>=3.1.6,<4.0.0",
    "sphinx>=6.2.0,<7.0.0",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme>=3.0.2,<4.0.0",
    "boto3>=1.34,<2.0.0",
    "moto>=5.0,<6.0.0",
    "sqlalchemy>=2.0,<3.0.0",
    "openpyxl>=3.1,<4.0.0",
    "sphinxcontrib-mermaid>=0.9.2,<0.10.0",
    "doc8>=2.0.0,<3.0.0",
    "codespell>=2.4.1,<3.0.0",
    "pip>=26.0,<27.0.0",
    "neo4j>=6.2.0,<7.0.0",
    "pymongo>=4.17.0,<5.0.0",
    "bandit>=1.9.4,<2.0.0",
    "atheris>=3.0.0,<4.0.0; python_version>='3.11'",
    "sphinx-click>=6.2.0,<7.0.0"
]
docs = [
    "furo<2023.0.0",
    "pyyaml"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
src = ["packages/core/src", "packages/plugins-workflows/src", "packages/providers-airflow/src", "packages/plugins-streamlit/src", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["imednet", "imednet_workflows", "apache_airflow_providers_imednet", "imednet_streamlit"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "SLF", "D"]
ignore = ["ANN", "S101", "E501", "E402", "E701", "E713", "F401", "F403", "F405", "N802", "F841", "F811"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["field_validator", "model_validator"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.doc8]
max_line_length = 400
ignore_path = ["docs/_build"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = false
plugins = []
exclude = '^examples/.*$'

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pythonjsonlogger.*",
    "opentelemetry",
    "opentelemetry.*",
    "airflow",
    "airflow.*",
    "typer",
    "typer.*",
    "rich",
    "rich.*",
    "faker",
    "faker.*",
    "sqlalchemy",
    "sqlalchemy.*",
    "dotenv",
    "dotenv.*",
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
    "moto",
    "moto.*",
    "openpyxl",
    "openpyxl.*",
    "duckdb",
    "duckdb.*",
    "streamlit",
    "streamlit.*",
    "altair",
    "altair.*",
]
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
"packages/core/**/*.py" = ["SLF001"]
"tests/**/*.py" = ["SLF001"]
"scripts/**/*.py" = ["SLF001"]
"packages/plugins-sinks/tests/**/*.py" = ["SLF001"]

[tool.ruff.format]
quote-style = "preserve"

[tool.hatch.build.targets.wheel]
packages = []
include = ["CHANGELOG.md"]
