[project]
name = "imednet-workspace"
version = "0.1.0"
description = "Monorepo workspace for imednet packages"
authors = [
    { name = "Frederick de Ruiter", email = "127706008+fderuiter@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "imednet",
    "imednet-workflows",
    "imednet-streamlit",
    "imednet-plugins-sinks"
]

[project.optional-dependencies]
dev = [
    "pandas>=2.2.3,<3.0.0",
    "duckdb>=1.1.0",
    "pyarrow>=14.0.1",
    "pytest>=9.0.3",
    "pytest-cov>=6.1.1,<7.0.0",
    "respx>=0.22.0,<0.23.0",
    "pytest-asyncio>=0.24.0",
    "faker>=24.9.0,<25.0.0",
    "sphinx>=6.2.0,<7.0.0",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme>=3.0.2,<4.0.0",
    "sqlalchemy>=2.0,<3.0.0",
    "openpyxl>=3.1,<4.0.0",
    "sphinxcontrib-mermaid>=0.9.2,<0.10.0",
    "neo4j>=6.2.0,<7.0.0",
    "pymongo>=4.17.0,<5.0.0",
    "atheris>=3.0.0,<4.0.0; python_version>='3.12'",
    "sphinx-argparse>=0.5.0",
    "playwright",
    "axe-playwright-python",
    "click>=8.3.3"
]
docs = [
    "furo<2026.0.0",
    "myst-parser>=1.0.0",
    "mypy>=1.15.0,<1.16.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
src = ["packages/core/src", "packages/plugins-workflows/src", "packages/providers-airflow/src", "packages/plugins-streamlit/src", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["imednet", "imednet_workflows", "apache_airflow_providers_imednet", "imednet_streamlit"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "SLF", "D", "S", "B", "C4", "SIM", "UP", "PT", "RET", "RUF"]
ignore = ["ANN", "S101", "E501", "E402", "E701", "E713", "F403", "F405", "N802", "F811"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["field_validator", "model_validator"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = []
exclude = '^(examples/.*|tests/.*|packages/.*/tests/.*)$'

[[tool.mypy.overrides]]
module = [
    "imednet.models.*",
    "imednet.errors.*"
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_return_any = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pythonjsonlogger.*",
    "opentelemetry",
    "opentelemetry.*",
    "airflow",
    "airflow.*",
    "typer",
    "typer.*",
    "rich",
    "rich.*",
    "faker",
    "faker.*",
    "sqlalchemy",
    "sqlalchemy.*",
    "dotenv",
    "dotenv.*",
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
    "moto",
    "moto.*",
    "openpyxl",
    "openpyxl.*",
    "duckdb",
    "duckdb.*",
    "streamlit",
    "streamlit.*",
    "altair",
    "altair.*",
]
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
"packages/core/**/*.py" = ["SLF001"]
"packages/core/src/imednet/integrations/export.py" = ["D101", "D102", "D107", "S608"]
"packages/core/src/imednet/integrations/parquet.py" = ["S608"]
"packages/core/src/imednet/integrations/enrichment.py" = ["S307"]
"packages/core/src/imednet/utils/job_poller.py" = ["D107"]
"packages/plugins-workflows/src/imednet_workflows/duckdb_centralizer.py" = ["S608"]
"packages/plugins-workflows/src/imednet_workflows/extraction_engine.py" = ["S307"]
"tests/**/*.py" = ["SLF001", "S", "D"]
"scripts/**/*.py" = ["SLF001", "S", "D"]
"examples/**/*.py" = ["SLF001", "S", "D"]
"final_automate.py" = ["D"]
"packages/plugins-sinks/tests/**/*.py" = ["SLF001"]

[tool.ruff.format]
quote-style = "preserve"

[tool.hatch.build.targets.wheel]
packages = []
include = ["CHANGELOG.md"]

[tool.hatch.envs.default]
features = ["dev", "docs"]
installer = "uv"
dependencies = [
    "imednet @ {root:uri}/packages/core",
    "imednet-workflows @ {root:uri}/packages/plugins-workflows",
    "apache-airflow-providers-imednet @ {root:uri}/packages/providers-airflow",
    "imednet-streamlit @ {root:uri}/packages/plugins-streamlit",
    "imednet-plugins-sinks @ {root:uri}/packages/plugins-sinks",
]

[tool.hatch.envs.default.scripts]
test = "pytest --ignore=tests/live/ --ignore=tests/browser/ {args:tests/}"
docs = "python scripts/build_docs.py"

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "ruff>=0.11.6,<0.16.0",
    "mypy>=1.15.0,<1.16.0",
    "typos",
    "semgrep",
    "pip-audit",
    "detect-secrets",
    "pandas-stubs",
    "types-requests",
    "pydantic",
    "click>=8.3.3",
    "imednet @ {root:uri}/packages/core",
    "imednet-workflows @ {root:uri}/packages/plugins-workflows",
    "imednet-streamlit @ {root:uri}/packages/plugins-streamlit",
    "apache-airflow-providers-imednet @ {root:uri}/packages/providers-airflow",
    "imednet-plugins-sinks @ {root:uri}/packages/plugins-sinks",
]

[tool.hatch.envs.lint.scripts]
fmt = "ruff format --check {args:packages}"
ruff-check = "ruff check {args:packages}"
mypy-check = "mypy {args:packages}"
typos-check = "typos {args:packages}"
semgrep-check = "semgrep scan --config p/security-audit --error {args:packages}"
audit = "pip-audit -s osv --timeout 60"
secrets = "detect-secrets-hook --baseline .secrets.baseline {args:packages}"
all = [
    "fmt",
    "ruff-check",
    "mypy-check",
    "typos-check",
    "semgrep-check",
    "audit",
    "secrets"
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
imednet = { workspace = true }
imednet-workflows = { workspace = true }
imednet-streamlit = { workspace = true }
imednet-plugins-sinks = { workspace = true }
apache-airflow-providers-imednet = { workspace = true }





# Explicit exceptions for unmigrated legacy packages [cite:source_relaxed_packages]
[[tool.mypy.overrides]]
module = [
    "imednet.form_designer.*",
    "imednet.compat.*",
    "apache_airflow_providers_imednet.*"
]
strict = false
ignore_errors = true
